--- a/style.css
+++ b/style.css
@@ -1,9 +1,140 @@
-html {font-size: 16px;}
+@charset "UTF-8";
+.cookie-consent {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  text-align: center;
+  color: black;
+  background-color: #ddd;
+  padding: 16px;
+  width: auto;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: inline-block;
+}
+
+.cookie-consent-text {
+  margin-right: 16px;
+}
+
+.cookie-consent-yes {
+  text-decoration: underline;
+  font-weight: bold;
+  margin-right: 16px;
+}
+
+.cookie-consent-no {
+  text-decoration: underline;
+}
+
+.project-style-guide {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: block;
+  width: 100%;
+  background: white;
+  padding: 16px;
+  border: 8px solid black;
+  border-bottom: 8px double black;
+  border-top: 8px double black;
+}
+
+.project-style-guide-title {
+  margin-bottom: 8px;
+}
+
+.project-style-guide-description {
+  margin-bottom: 8px;
+}
+
+.project-style-guide-link {
+  display: inline-block;
+  background-color: #000;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 1rem;
+  line-height: 1rem;
+  padding: 12px 16px;
+}
+
+.project-style-guide-link:hover {
+  text-decoration: underline;
+}
+
+.project-style-guide-technology-list {
+  margin: 0px;
+  padding: 0px;
+}
+
+.project-style-guide-technology-list li {
+  display: inline-block;
+  background-color: #ddd;
+  padding: 4px 8px;
+  color: #666;
+  margin-right: 8px;
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
+
+/* (KOMBINATOR + )SELEKTIRAMO SVAKI LIST ITEM KOJI JE DESNO OD LIST ITEMA KOJI PRIPADA TOJ LISTI -> nije dobra logika ako se prelamaju list itemi
+
+.project-style-guide-technology-list li + li {
+    margin-left: 8px;
+} */
+/* ZADNJI CHILD LISTE NEMA MARGINU DESNO */
+.project-style-guide-technology-list li:last-child {
+  margin-right: 0px;
+}
+
+.project-link {
+  display: inline-block;
+  background-color: black;
+  color: white;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 1rem;
+  line-height: 1rem;
+  padding: 12px 16px;
+}
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row nowrap;
+          flex-direction: row nowrap;
+}
+
+.header-image {
+  /* sa flex-grow i flex-shrink 0 nam se slika neće ni povećavati niti smanjivati s povećanjem ili smanjenjem ekrana nego će zadržati dimenzije koje su mu propisane sadržajem*/
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+.header-description {
+  padding-top: 0px;
+  margin-top: 0px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  margin-left: 48px;
+}
+
+html {
+  font-size: 16px;
+}
+
 body {
-    color: rgb(78, 70, 70);
-    font-size: 1rem;
-    line-height: 1;
-    /* background-color: rgb(192, 137, 137);
+  color: #4e4646;
+  font-size: 1rem;
+  line-height: 1;
+  /* background-color: rgb(192, 137, 137);
     background-image: url(./backgroung_pattern.jpg);
     background-repeat: no-repeat;
     background-size: 200px;
@@ -11,304 +142,276 @@ body {
     background-image: 
     linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(5,85,172,1) 80%, rgba(0,212,255,1) 100%); */
 }
+
 p, .p {
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
 }
+
 h6, .h6 {
-    font-size: 1.33rem;
-    font-weight: 700;
-    margin: 8px 0px;
+  font-size: 1.33rem;
+  font-weight: 700;
 }
+
 h5, .h5 {
-    font-size: 1.66rem;
-    font-weight: 700;
+  font-size: 1.66rem;
+  font-weight: 700;
 }
+
 h4, .h4 {
-    font-size: 2rem;
-    font-weight: 700;
+  font-size: 2rem;
+  font-weight: 700;
 }
+
 h3, .h3 {
-    font-size: 2.33rem;
-    font-weight: 700;
+  font-size: 2.33rem;
+  font-weight: 700;
 }
+
 h2, .h2 {
-    font-size: 2.66rem;
-    font-weight: 700;
-    margin-bottom: 16px;
+  font-size: 2.66rem;
+  font-weight: 700;
+  margin-bottom: 16px;
 }
+
 h1, .h1 {
-    font-size: 3rem;
-    font-weight: 700;
+  font-size: 3rem;
+  font-weight: 700;
 }
+
 .text-align-left {
-    text-align: left;
+  text-align: left;
 }
+
 .text-align-right {
-    text-align: right;
+  text-align: right;
 }
+
 .text-align-center {
-    text-align: center;
+  text-align: center;
 }
+
 .text-align-justify {
-    text-align: justify;
+  text-align: justify;
 }
+
 .link {
-    text-decoration: none;
+  text-decoration: none;
 }
+
 .fancy {
-    text-shadow: 
-    0px 2px 0px rgba(255, 0, 0, 1),
-    0px 4px 0px rgba(0, 255, 0, 1),
-    0px 6px 0px rgba(0, 0, 255, 1);
+  text-shadow: 0px 2px 0px red, 0px 4px 0px lime, 0px 6px 0px blue;
 }
+
 .fancy2 {
-    font-size: 5rem;
-    color: white;
-    text-shadow: 
-    1px 0px 0px rgba(255, 0, 0, 1),
-    0px 1px 0px rgba(0, 255, 0, 1),
-    -1px 0px 0px rgba(0, 0, 255, 1),
-    0px -1px 0px yellow;
+  font-size: 5rem;
+  color: white;
+  text-shadow: 1px 0px 0px red, 0px 1px 0px lime, -1px 0px 0px blue, 0px -1px 0px yellow;
 }
+
 .highlight {
-    background-color: rgba(255, 255, 0, 0.5);
+  background-color: rgba(255, 255, 0, 0.5);
 }
+
 .wrapper {
-    max-width: 1024px;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    /* gornja i donja margina 0, lijeva i desna auto */
-    margin: 0 auto;
-    padding-left: 16px;
-    padding-right: 16px;
-    /* gornja dva reda mozemo zamjeniti sljedećim kodom */
-    /* padding: 0,16px; */
-    box-sizing: border-box;
+  max-width: 1024px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  /* gornja i donja margina 0, lijeva i desna auto */
+  margin: 0 auto;
+  padding-left: 16px;
+  padding-right: 16px;
+  /* gornja dva reda mozemo zamjeniti sljedećim kodom */
+  /* padding: 0,16px; */
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
+
 .button_text {
-    text-decoration: underline;
-    text-decoration: solid;
+  text-decoration: underline;
+  -webkit-text-decoration: solid;
+          text-decoration: solid;
 }
-.wrapper2 {
-    max-width: 1024px;
-    text-align: center;
-    width: 100%;
-    margin: 0 auto;
-    padding: 32px 16px;
-    box-sizing: border-box;
-}
+
 .profile-image {
-    display: block;
-    width: 300px;
-    height: 300px;
-    object-fit: cover;
-    object-position: center;
-    border-radius: 40px;
-    border-width: 10px;
-    border-style:double;
-    border-color: rgb(84, 117, 119);
+  display: block;
+  width: 300px;
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  border-radius: 40px;
+  border-width: 10px;
+  border-style: double;
+  border-color: #547577;
 }
 
-.header {
-    display: flex;
-    flex-direction: row nowrap;
+.work {
+  border-radius: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  background: #c9c5c5;
+  padding: 24px;
+  border: 2px solid #547577;
+  margin: top 12px;
 }
 
-.header-image{
-    /* sa flex-grow i flex-shrink 0 nam se slika neće ni povećavati niti smanjivati s povećanjem ili smanjenjem ekrana nego će zadržati dimenzije koje su mu propisane sadržajem*/
-    flex-grow: 0;
-    flex-shrink: 0;
-}
-
-.header-description {
-    padding-top: 0px;
-    margin-top: 0px;
-    flex-grow: 1;
-    margin-left: 48px;
-}
-
-.project{
-    border-radius: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 100%;
-    background: rgb(201, 197, 197);
-    padding: 24px;
-    border: 2px solid rgb(84, 117, 119);
-    margin: top 12px;
-
-}
-.work{
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    background: rgb(201, 197, 197);
-    padding: 24px;
-    border: 2px solid rgb(84, 117, 119);
-    margin: top 12px;
-
-}
-.contact{
-    border-radius: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 100%;
-    background: grey;
-    padding: 24px;
-    border: 2px solid rgb(84, 117, 119);
-    margin: top 24px;
-
-}
-
-.years {
-    margin: 0px;
-}
-
-.project-photo {
-    border-radius: 20px;
-    width: 300px;
-    height: 200px;
-}
-
-/* ANIMACIJA U PRVOJ KARTICI */
-
-.project1 {
-    opacity: 0;
-    animation: One 2s ease 0.5s 1 forwards;
-}
-.project2 {
-    opacity: 0;
-    animation: One 2s ease 2s 1 forwards;
-}
-.project3 {
-    opacity: 0;
-    animation: One 2s ease 4s 1 forwards ;
-
-}
-
-
-@keyframes One{
-    0% {
-        opacity:0;
-    }
-    50% {
-        opacity:0.5;
-    }
-    100% {
-        opacity:1
-    }
-}
-
-/* PREBACIVANJE SLIKA U STUPCE KAD JE SCREEN MANJI OD 1024px */
-
-@media screen and (max-width: 1024px) {
-    .project{
-        display: flex;
-        flex-direction: column;
-    }
-    
-}
-
-.project-title {}
-.project-description {}
-.project-link {
-    display: inline-block;
-    background-color: black;
-    color: white;
-    text-decoration: none;
-    font-weight: 700;
-    font-size: 1rem;
-    line-height: 1rem ;
-    padding: 12px 16px;
+.contact {
+  border-radius: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 100%;
+  background: grey;
+  padding: 24px;
+  border: 2px solid #547577;
+  margin: top 24px;
 }
 
 .button-transition {
-    display: inline-block;
-    background-color: black;
-    color: white;
-    text-decoration: none;
-    font-weight: 700;
-    font-size: 1rem;
-    line-height: 1rem;
-    padding: 12px 16px;
+  display: inline-block;
+  background-color: black;
+  color: white;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 1rem;
+  line-height: 1rem;
+  padding: 12px 16px;
 }
 
 .button-transition:hover {
-    transform:scaleX(2);
+  -webkit-transform: scaleX(2);
+          transform: scaleX(2);
 }
-    
 
 .project-link:hover {
-    text-decoration: underline;
-    }
-
-.project-technology-list {}
+  text-decoration: underline;
+}
 
 .palette {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-.palette-item {
-    display: block;
-    width: 20%;
-    height: 300px;
-    background: red;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
+.palette-item {
+  display: block;
+  width: 20%;
+  height: 300px;
+  background: red;
+}
+
+@-webkit-keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 
 @keyframes blink {
-    0% {
-        opacity: 1;;
-    }
-    100% {
-        opacity: 0;
-    }
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 .blinking {
-    animation: blink 5s ease-in-out 0s infinite alternate;
-    animation-fill-mode: forwards;
+  -webkit-animation: blink 5s ease-in-out 0s infinite alternate;
+          animation: blink 5s ease-in-out 0s infinite alternate;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
+
 .moving {
-    animation: move 0.5s infinite;
-    width: 300px;
-    height: 300px;
-    background-color: green;
+  -webkit-animation: move 0.5s infinite;
+          animation: move 0.5s infinite;
+  width: 300px;
+  height: 300px;
+  background-color: green;
+}
+
+@-webkit-keyframes move {
+  0% {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+  }
+  100% {
+    position: absolute;
+    top: 200px;
+    left: 0px;
+  }
 }
 
 @keyframes move {
-    0% {
-        position: absolute;
-        top: 0px;
-        left: 0px;
-    }
-    100% {
-        position: absolute;
-        top: 200px;
-        left: 0px;
-    }
+  0% {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+  }
+  100% {
+    position: absolute;
+    top: 200px;
+    left: 0px;
+  }
+}
+
+@-webkit-keyframes spin-left-right {
+  0% {
+    -webkit-transform: rotate(0turn);
+            transform: rotate(0turn);
+  }
+  50% {
+    -webkit-transform: rotate(1turn);
+            transform: rotate(1turn);
+  }
+  100% {
+    -webkit-transform: rotate(0turn);
+            transform: rotate(0turn);
+  }
 }
 
 @keyframes spin-left-right {
-    0% {
-        transform: rotate(0turn);
-    }
-    50% {
-        transform: rotate(1turn);
-    }
-    100% {
-        transform: rotate(0turn);
-    }
-
+  0% {
+    -webkit-transform: rotate(0turn);
+            transform: rotate(0turn);
+  }
+  50% {
+    -webkit-transform: rotate(1turn);
+            transform: rotate(1turn);
+  }
+  100% {
+    -webkit-transform: rotate(0turn);
+            transform: rotate(0turn);
+  }
 }
 
 .spin-left-right {
-    animation: spin-left-right 5s ease 0s 1 forwards;
+  -webkit-animation: spin-left-right 5s ease 0s 1 forwards;
+          animation: spin-left-right 5s ease 0s 1 forwards;
 }
+/*# sourceMappingURL=style.css.map */
